# Coding_Test_Prac

./: .gitignore  README.md  VGG16_implement.ipynb  tf_tutorial_08_VGG16.ipynb
Algorithms_Insterview/: Linked_list.py  Q01_Valid_Palindrome.py  Q02_Reverse_String.py  Q05_Group_Anagrams.py  Q07_Two_sum.py  Q09_3Sum.py  Q10_Array_Partition.py  Q11_Product_of_Array_except_self.py  Q12_Best_time_to_buy_and_sell_stock.py  Q13-2_Palindrome_Linked_List.py  Q13_Palindrome_Linked_List.py  Q14_Merge_Two_Sorted_lists.py  Q15_Reverse_Linked_List.py  Q16_Add_Two_Numbers.py  Q17_Swap_Node_in_Pairs.py  Q18_Odd_Even_Linked_List.py  Q19_Reverse_Linked_List_II.py  Q20_Valid_Parentheses.py  Q21_Remove_Duplicate_Letters.py  Q22_Daily_Temperatures.py
BaekJoon/: 1003.py  1065.py  10952.py  1110.py  1546.py  2562.py  2739.py  8958.py
BaekJoon/cpp/: 10828_stack.cpp  10828_stack_2.cpp  10845_queue.cpp  11401.cpp  12865.cpp  1292.cpp  1292.out  1655.cpp  2460.cpp  2460.out  2577-2.cpp  2577-2.out  2577.cpp  2577.out  2592.cpp  2592.out  2711.cpp  2711.out  2908.cpp  2908.out  2953.cpp  2953.out  CMakeLists.txt
BaekJoon/python/: 10817.py  10828_stack.py  10830.py  10871.py  11022.py  11066.py  2439.py  2530.py  2558.py  2577.py  2675.py  2935.py  3052.py  4344.py  (+3 more)
Goorm/: CMakeLists.txt
Goorm/level1/: 숫자제거배열.py  퍼센트농도.py  헷갈리는작대기.py
Goorm/level2/: M배배열.py  uiux디자이너.py  거울단어.py  동전퍼즐.py  삼각형더하기.py  순위계산하기.py  체크카드.cpp  체크카드.py  퍼져나가는소문.py
Goorm/level3/: 심리적거리감.py  친구추천.py
Goorm/level4/: 스탈린정렬.py  흔한제목찾기.py
Programmers/: CMakeLists.txt  main.cpp  test2.py  test3.py
mnc_ml_test/: README.md  main.py  test.py  train.py
tencho/: ex13.ipynb  ex7.ipynb
모두의_알고리즘/: 01_sum.py  02_sum_squred.py  03-1_find_max.py  03-2_find_min.py  04_same_name.py  05_factorial.py  06-1_gratest_common_divisor.py  06-2_gratest_common_divisor.py  06-3_Tower_of_Hanoi.py  07-1_sequential_search.py  07-2_sequential_search.py  07-3_sequential_search.py  08-1_sort.py  13-1_palindrome.py  14-1_find_friend.py  14-1_samename.py
(+102 files in other folders)
